--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,51 @@
 body {
   background-image: url(/assets/background.jpg);
-  background-size: 100%;
+  background-size: 100vw;
   background-repeat: no-repeat;
+  background-color: #27274D;
+  height: 2000px;
+  margin: 0;
+}
+
+.mediaLinks {
+  list-style: none;
+  display: flex;
+  justify-content: right;
+  margin-right: 50px;
+}
+.mediaLinks li {
+  padding: 20px;
+  filter: drop-shadow(#806CC2 4px 4px);
+}
+.mediaLinks li a:hover {
+  opacity: 70%;
+}
+
+main {
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+main h1 {
+  font-family: "Holtwood One SC", serif;
+  color: #BBABF1;
+  font-size: 5vw;
+  text-shadow: #806CC2 1vw 1vw;
+  position: relative;
+  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+main p, main ul {
+  color: #806CC2;
+  font-family: "Silkscreen", cursive;
+  font-size: 1.75vw;
+}
+main p span, main p li, main ul span, main ul li {
+  color: #BBABF1;
+}
+main p li, main ul li {
+  list-style: none;
 }/*# sourceMappingURL=style.css.map */
