--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,57 @@
+@import './variables';
+
 body{
     background-image: url(/assets/background.jpg);
-    background-size: 100%;
+    background-size: 100vw;
     background-repeat: no-repeat;
+    background-color: $backgroundColor;
+
+    height: 2000px;
+    margin: 0;
+}
+
+.mediaLinks{
+    list-style: none;
+    display: flex;
+    justify-content: right;
+    margin-right: 50px;
+    li{
+        padding: 20px;
+        filter: drop-shadow($secondaryColor 4px 4px);
+        a{
+            &:hover{
+                opacity: 70%;
+            }
+        }
+    }
+}
+
+main{
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    h1{
+        font-family: $headerFont;
+        color: $primaryColor;
+        font-size: $headerFontSize;
+        text-shadow: $secondaryColor $headerFontShadowSize;
+    
+        position: relative;
+        margin: 0;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+    }
+    p, ul{
+        color: $secondaryColor;
+        font-family: $textFont;
+        font-size: $textFontSize;
+        span, li{
+            color: $primaryColor;
+        }
+        li{
+            list-style: none;
+        }
+    }
 }
